--- a/modules/admin/tabs/10:Customer_configuration/page.html
+++ b/modules/admin/tabs/10:Customer_configuration/page.html
@@ -26,7 +26,7 @@
    
   </if>
   <preparse tag=sqloutput
-     query="select id,name,password,fax,sms,user_id from customers
+     query="select id,name,password,user_id from customers
   	    where id='¤customer:quote=mysql¤'">
     <preparse tag=tablify cellseparator=/// rowseparator=\\\
   		  cellpadding=0 cellspacing=0>
