--- a/modules/autoweb/tabs/10:Template_Editor/page.html
+++ b/modules/autoweb/tabs/10:Template_Editor/page.html
@@ -215,6 +215,7 @@
 	      <input type=hidden name=edit value='¤edit:quote=mysql¤'>
 	      <input type=hidden name=wizard value='¤wizard:quote=mysql¤'>
               <table>
+	        <tr><td collspan=2><h3>$title$</h3></td></tr>
 	        <sqloutput quote='#' query="select * from template_vars where
 					    page_id='$id$'">
 		  <cset preparse variable=options><pike>
@@ -231,11 +232,13 @@
 		      query="select * from customers_schemes_vars
 		      where scheme_id='¤current_scheme:quote=mysql¤' and
 		      variable_id='#id:quote=mysql#'">£value£</sqloutput></cset>
+                  <if match='#type# is string'><cset variable=size>size=40</cset></if>
+		  <else><cset variable=size></cset></else>
 		  <formoutput quote='£'>
 		    <tr>
 		      <td><b>#title#:</b></td>
 		      <td><var name="variable_#id#" type="#type#" noexample
-			       options="£options£" default="£default£"></td>
+			       options="£options£" default="£default£" £size£></td>
 		    </tr>
 		    <if not match='#help# is '>
 		      <tr><td></td><td>#help#</td></tr>
