Some small, mostly cosmetic changes.
Rev: modules/admin/actions/20:Add_customer/page.html:1.10
Rev: modules/autoweb/Tab.pmod:1.13
Rev: modules/autoweb/autositefs.pike:1.22
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit.pike:1.6
Rev: modules/autoweb/tabs/30:Statistics/page.pike:1.3
Rev: modules/autoweb/webadm.pike:1.26

--- a/modules/admin/actions/20:Add_customer/page.html
+++ b/modules/admin/actions/20:Add_customer/page.html
@@ -54,7 +54,7 @@
        <sqlquery query="insert into dns
          values(NULL,'$customer_id$','$domain:quote=mysql$','','MX',
         '10 $domain:quote=mysql$')">
-       <autosite-fs-init-home-dir id=$customer_id$>
+       <autosite-fs-init-home-dir id=$customer_id$ company='¤name¤'>
        
      </formoutput>
      <b>Information saved.<br>
