--- a/html/mail/import.html
+++ b/html/mail/import.html
@@ -1,10 +1,4 @@
 <insert file=stddef>
 <h1>AutoMail(tm)(r) import from directory. :-)</h1>
   
-<debug-import-mail-from-dir dir=/home/per/Mail/mail.roxen.alpha>
-
-(< "foo" >)
-
-(< @hej >)
-
-mkmutiset( hej )
+<debug-import-mail-from-dir dir=/home/per/Mail/mail.misc>
