--- a/modules/admin/tabs/30:Extra_services/page.html
+++ b/modules/admin/tabs/30:Extra_services/page.html
@@ -22,6 +22,9 @@
       <autosite-intraseek-launch id=¤customer¤>
     </sqloutput>
   </if>
+  <if variable="disable is Intraseek">
+     <autosite-intraseek-delete id=¤customer¤>
+  </if>
 
   <sqloutput quote='£' query="select feature from features_list order by feature">
     <obox title='£feature£'>
