--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -206,11 +206,11 @@
           type="select" help=""
           _page_name="Graphical element p2" _option_group_name="logo position">
 
-  <insert name="corner_1" title="Corner 1"
+  <insert name="corner_1_size" title="Corner 1 size"
           type="int" help=""
           _page_name="Graphical element p3">
 
-  <insert name="corner_2" title="Corner 2"
+  <insert name="corner_2_size" title="Corner 2 size"
           type="int" help=""
           _page_name="Graphical element p3">
 
@@ -298,10 +298,6 @@
   <insert name="nav_name" title="Navigation style"
           type="select" help=""
 	  _page_name="Navigation type p1" _option_group_name="navigation files">
-
-  <insert name="nav_bg_img" title="Background image"
-          type="select" help=""
-	  _page_name="Navigation type p1" _option_group_name="navigation background images">
 
   <!--  Navigation text  -->	  
   <insert name="nav_font" title="Font"
@@ -425,6 +421,7 @@
   <insert name="Klee" value="Klee.tmpl" _group_name="template files">
   <insert name="Dawn" value="dawn.tmpl" _group_name="template files">
   <insert name="Sand" value="sand.tmpl" _group_name="template files">
+  <insert name="Blob" value="blob.tmpl" _group_name="template files">
 
   <!--  Background files  -->
   <insert name="--- None ---" value="" _group_name="background images">
@@ -460,16 +457,6 @@
   <insert name="Bold" value="bold" _group_name="font style">
   <insert name="Italic" value="italic" _group_name="font style">
   <insert name="Bold Italic" value="bold italic" _group_name="font style">
-
-  <!--  Navigation images  -->
-  <insert name="--- None ---" value="none" _group_name="navigation background images">
-  <insert name="bg 1" value="/img/nav1/bg1.pnm" _group_name="navigation background images">
-  <insert name="bg 2" value="/img/nav1/bg2.pnm" _group_name="navigation background images">
-  <insert name="bg 3" value="/img/nav1/bg3.pnm" _group_name="navigation background images">
-  <insert name="bg 4" value="/img/nav1/bg4.pnm" _group_name="navigation background images">
-  <insert name="bg 5" value="/img/nav1/bg5.pnm" _group_name="navigation background images">
-  <insert name="bg 6" value="/img/nav1/bg6.pnm" _group_name="navigation background images">
-  <insert name="cashew" value="/img/nav2/cashew.pnm" _group_name="navigation background images">
 
   <!--  Page head images  -->
   <insert name="--- None ---" _group_name="page head images" value="">
@@ -539,6 +526,8 @@
   <insert scheme_id=1 _variable_name="bg_image" value="">
   <insert scheme_id=1 _variable_name="bg_color" value="white">
   <insert scheme_id=1 _variable_name="text_color" value="black">
+  <insert scheme_id=1 _variable_name="text_bg_color" value="white">
+  <insert scheme_id=1 _variable_name="text_bg_image" value="">
 
   <insert scheme_id=1 _variable_name="link_color" value="#000070">
   <insert scheme_id=1 _variable_name="vlink_color" value="#000070">
@@ -566,6 +555,9 @@
   <insert scheme_id=1 _variable_name="title_align" value="left">
   <insert scheme_id=1 _variable_name="title_shadow" value="0">
 
+  <insert scheme_id=1 _variable_name="corner_1_size" value="1">
+  <insert scheme_id=1 _variable_name="corner_2_size" value="1">
+
   <insert scheme_id=1 _variable_name="page_head_image" value="none">
   <insert scheme_id=1 _variable_name="page_head_image_align" value="left">
   <insert scheme_id=1 _variable_name="page_head_bar_color" value="none">
@@ -579,7 +571,6 @@
   <insert scheme_id=1 _variable_name="nav_bg_color_mouse" value="white">
 
   <insert scheme_id=1 _variable_name="nav_name" value="basic.ntmpl">
-  <insert scheme_id=1 _variable_name="nav_bg_img" value="none">
 
   <insert scheme_id=1 _variable_name="nav_font" value="helvetica">
   <insert scheme_id=1 _variable_name="nav_font_style" value="">
@@ -593,6 +584,8 @@
   <insert scheme_id=2 _variable_name="bg_image" value="">
   <insert scheme_id=2 _variable_name="bg_color" value="black">
   <insert scheme_id=2 _variable_name="text_color" value="white">
+  <insert scheme_id=2 _variable_name="text_bg_color" value="black">
+  <insert scheme_id=2 _variable_name="text_bg_image" value="">
 
   <insert scheme_id=2 _variable_name="link_color" value="#a0a0a0">
   <insert scheme_id=2 _variable_name="vlink_color" value="#808080">
@@ -621,6 +614,9 @@
   <insert scheme_id=2 _variable_name="title_align" value="right">
   <insert scheme_id=2 _variable_name="title_shadow" value="0">
 
+  <insert scheme_id=2 _variable_name="corner_1_size" value="1">
+  <insert scheme_id=2 _variable_name="corner_2_size" value="1">
+
   <insert scheme_id=2 _variable_name="page_head_image" value="none">
   <insert scheme_id=2 _variable_name="page_head_image_align" value="left">
   <insert scheme_id=2 _variable_name="page_head_bar_color" value="#220070">
@@ -634,7 +630,6 @@
   <insert scheme_id=2 _variable_name="nav_bg_color_mouse" value="#220070">
 
   <insert scheme_id=2 _variable_name="nav_name" value="night.ntmpl">
-  <insert scheme_id=2 _variable_name="nav_bg_img" value="none">
 
   <insert scheme_id=2 _variable_name="nav_font" value="officina sans">
   <insert scheme_id=2 _variable_name="nav_font_style" value="bold">
@@ -648,6 +643,8 @@
   <insert scheme_id=3 _variable_name="bg_image" value="">
   <insert scheme_id=3 _variable_name="bg_color" value="white">
   <insert scheme_id=3 _variable_name="text_color" value="black">
+  <insert scheme_id=3 _variable_name="text_bg_color" value="white">
+  <insert scheme_id=3 _variable_name="text_bg_image" value="">
 
   <insert scheme_id=3 _variable_name="link_color" value="#000070">
   <insert scheme_id=3 _variable_name="vlink_color" value="#000070">
@@ -676,6 +673,9 @@
   <insert scheme_id=3 _variable_name="title_align" value="right">
   <insert scheme_id=3 _variable_name="title_shadow" value="0">
 
+  <insert scheme_id=3 _variable_name="corner_1_size" value="1">
+  <insert scheme_id=3 _variable_name="corner_2_size" value="1">
+
   <insert scheme_id=3 _variable_name="page_head_image"
     _dummy_name="page_head_image" _option_name="Squares">
   <insert scheme_id=3 _variable_name="page_head_image_align" value="right">
@@ -690,7 +690,6 @@
   <insert scheme_id=3 _variable_name="nav_bg_color_mouse" value="black">
 
   <insert scheme_id=3 _variable_name="nav_name" value="Klee.ntmpl">
-  <insert scheme_id=3 _variable_name="nav_bg_img" value="none">
 
   <insert scheme_id=3 _variable_name="nav_font" value="officina sans">
   <insert scheme_id=3 _variable_name="nav_font_style" value="">
@@ -704,6 +703,8 @@
   <insert scheme_id=4 _variable_name="bg_image" value="">
   <insert scheme_id=4 _variable_name="bg_color" value="white">
   <insert scheme_id=4 _variable_name="text_color" value="black">
+  <insert scheme_id=4 _variable_name="text_bg_image" value="">
+  <insert scheme_id=4 _variable_name="text_bg_color" value="white">
 
   <insert scheme_id=4 _variable_name="link_color" value="#000070">
   <insert scheme_id=4 _variable_name="vlink_color" value="#000070">
@@ -732,6 +733,9 @@
   <insert scheme_id=4 _variable_name="title_align" value="center">
   <insert scheme_id=4 _variable_name="title_shadow" value="0">
 
+  <insert scheme_id=4 _variable_name="corner_1_size" value="1">
+  <insert scheme_id=4 _variable_name="corner_2_size" value="1">
+
   <insert scheme_id=4 _variable_name="page_head_image"
     _dummy_name="page_head_image" _option_name="Blue clouds">
   <insert scheme_id=4 _variable_name="page_head_image_align" value="center">
@@ -746,7 +750,6 @@
   <insert scheme_id=4 _variable_name="nav_bg_color_mouse" value="darkblue">
 
   <insert scheme_id=4 _variable_name="nav_name" value="dawn.ntmpl">
-  <insert scheme_id=4 _variable_name="nav_bg_img" value="none">
 
   <insert scheme_id=4 _variable_name="nav_font" value="officina sans">
   <insert scheme_id=4 _variable_name="nav_font_style" value="bold">
@@ -760,6 +763,8 @@
   <insert scheme_id=5 _variable_name="bg_image" value="">
   <insert scheme_id=5 _variable_name="bg_color" value="white">
   <insert scheme_id=5 _variable_name="text_color" value="black">
+  <insert scheme_id=5 _variable_name="text_bg_image" value="">
+  <insert scheme_id=5 _variable_name="text_bg_color" value="white">
 
   <insert scheme_id=5 _variable_name="link_color" value="#000070">
   <insert scheme_id=5 _variable_name="vlink_color" value="#000070">
@@ -788,6 +793,9 @@
   <insert scheme_id=5 _variable_name="title_align" value="left">
   <insert scheme_id=5 _variable_name="title_shadow" value="0">
 
+  <insert scheme_id=5 _variable_name="corner_1_size" value="1">
+  <insert scheme_id=5 _variable_name="corner_2_size" value="1">
+
   <insert scheme_id=5 _variable_name="page_head_image"
     _dummy_name="page_head_image" _option_name="Sand">
   <insert scheme_id=5 _variable_name="page_head_image_align" value="right">
@@ -802,7 +810,6 @@
   <insert scheme_id=5 _variable_name="nav_bg_color_mouse" value="#a31805">
 
   <insert scheme_id=5 _variable_name="nav_name" value="sand.ntmpl">
-  <insert scheme_id=5 _variable_name="nav_bg_img" value="none">
 
   <insert scheme_id=5 _variable_name="nav_font" value="officina sans">
   <insert scheme_id=5 _variable_name="nav_font_style" value="bold">
