Changed foreign key in customers_schemes_vars and template_schemes_vars from variable_id to variable_name. Added some foreign keys.
Rev: modules/admin/actions/20:Add_customer/page.html:1.12
Rev: tools/templateinfo.html:1.23

--- a/modules/admin/actions/20:Add_customer/page.html
+++ b/modules/admin/actions/20:Add_customer/page.html
@@ -42,8 +42,8 @@
          query="select * from template_schemes_vars
 	        where scheme_id='$scheme_id$'">
          <sqlquery query="insert into customers_schemes_vars
-	                  (scheme_id,variable_id,value) values
-		          ('$new_scheme_id$','£variable_id£',
+	                  (scheme_id,variable_name,value) values
+		          ('$new_scheme_id$','£variable_name£',
 			   '£value:quote=mysql£')">
 	</sqloutput>
        
